# heic2png

./: .metadata  CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: build-native-deps.yml  ci.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  heic_native_core.cpp  heic_native_core.h  heic_native_jni.cpp
android/src/main/kotlin/com/hugocornellier/heic_native/: HeicNativePlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/heic_native_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: heic_native.podspec
ios/heic_native/: Package.swift
ios/heic_native/Sources/heic_native/: HeicNativePlugin.swift
lib/: heic_native.dart  heic_native_method_channel.dart  heic_native_platform_interface.dart
linux/: CMakeLists.txt  heic_native_plugin.cc  heic_native_plugin_private.h
linux/include/heic_native/: heic_native_plugin.h
linux/test/: heic_native_plugin_test.cc
macos/: heic_native.podspec
macos/heic_native/: Package.swift
macos/heic_native/Sources/heic_native/: HeicNativePlugin.swift
test/: heic_native_method_channel_test.dart  heic_native_test.dart
windows/: CMakeLists.txt  heic_native_plugin.cpp  heic_native_plugin.h  heic_native_plugin_c_api.cpp
windows/include/heic_native/: heic_native_plugin_c_api.h
windows/test/: heic_native_plugin_test.cpp
